@@ -10,10 +10,15 @@ if XTRAP
 XTRAPMOD = libxtrap.la
 endif
 
+# cfb24 is only used by xf8_32wid, which is only used by sunffb on SPARC
+if BUILD_XF8_32WID
+CFB24MOD = libcfb24.la
+endif
+
 module_LTLIBRARIES = libafb.la \
                      libcfb.la \
                      libcfb16.la \
-                     libcfb24.la \
+                     $(CFB24MOD) \
                      libcfb32.la \
                      libfb.la \
                      liblayer.la \
